#fooincludedir=		directory to place in your --prefix include
#fooinclude_HEADERS	what files to put in the directory you just specified


casmincludedir=$(includedir)/casm
casminclude_HEADERS= ./CASM_global_definitions.hh 

clexincludedir=$(includedir)/casm/clex
clexinclude_HEADERS=./clex/ChemicalReference.hh\
					./clex/Clexulator_Draft.hh\
					./clex/clexulator_example.cc.hide\
					./clex/Clexulator.hh\
					./clex/CompositionConverter.hh\
					./clex/ConfigDoF.hh\
					./clex/ConfigEnumAllOccupations.hh\
					./clex/ConfigEnumAllOccupations_impl.hh\
					./clex/ConfigEnum.hh\
					./clex/ConfigEnumInterpolation.hh\
					./clex/ConfigEnumInterpolation_impl.hh\
					./clex/ConfigEnumIterator.hh\
					./clex/ConfigEnumStrain.hh\
					./clex/ConfigEnumStrain_impl.hh\
					./clex/ConfigIO.hh\
					./clex/ConfigIOHull.hh\
					./clex/ConfigIONovelty.hh\
					./clex/ConfigIOSelected.hh\
					./clex/ConfigIOStrain.hh\
					./clex/ConfigIOStrucScore.hh\
					./clex/ConfigIterator.hh\
					./clex/ConfigMapping.hh\
					./clex/ConfigSelection.hh\
					./clex/ConfigSelection_impl.hh\
					./clex/Configuration.hh\
					./clex/Correlation.hh\
					./clex/DoFManager.hh\
					./clex/ECIContainer.hh\
					./clex/FilteredConfigIterator.hh\
					./clex/NeighborList.hh\
					./clex/Norm.hh\
					./clex/ParamComposition.hh\
					./clex/PrimClex.hh\
					./clex/Properties.hh\
					./clex/Reference.hh\
					./clex/Supercell.hh


basissetincludedir=$(includedir)/casm/basisi_set
basissetinclude_HEADERS=./basis_set/BasisFunction.hh\
						./basis_set/BasisSet.hh\
						./basis_set/chebychev.m\
						./basis_set/DoF.hh\
						./basis_set/FunctionVisitor.hh\
						./basis_set/OccupantFunction.hh\
						./basis_set/PolynomialFunction.hh\
						./basis_set/Variable.hh


casmioincludedir=$(includedir)/casm/casm_io
casmioinclude_HEADERS=./casm_io/Args.hh\
					  ./casm_io/DataFormatter.hh\
					  ./casm_io/DataFormatter_impl.hh\
					  ./casm_io/DataFormatterTools.hh\
					  ./casm_io/DataFormatterTools_impl.hh\
					  ./casm_io/DataStream.hh\
					  ./casm_io/EigenDataStream.hh\
					  ./casm_io/FileEnumerator.hh\
					  ./casm_io/FormatFlag.hh\
					  ./casm_io/json_io/clex.hh\
					  ./casm_io/json_io/container.hh\
					  ./casm_io/json_io/global.hh\
					  ./casm_io/jsonParser.hh\
					  ./casm_io/Log.hh\
					  ./casm_io/SafeOfstream.hh\
					  ./casm_io/VaspIO.hh


clusterographyincludedir=$(includedir)/casm/clusterography
clusterographyinclude_HEADERS=./clusterography/ClusterFunctions.hh\
							  ./clusterography/Cluster.hh\
							  ./clusterography/Cluster_impl.hh\
							  ./clusterography/jsonClust.hh\
							  ./clusterography/OrbitBranch.hh\
							  ./clusterography/OrbitBranch_impl.hh\
							  ./clusterography/Orbit.hh\
							  ./clusterography/Orbit_impl.hh\
							  ./clusterography/Orbitree.hh\
							  ./clusterography/Orbitree_impl.hh\
							  ./clusterography/SiteCluster.hh


containerincludedir=$(includedir)/casm/container
containerinclude_HEADERS=./container/Array.hh\
						 ./container/BaseCounter.hh\
						 ./container/ContainerTraits.hh\
						 ./container/Counter.hh\
						 ./container/IsoCounter.hh\
						 ./container/LinearAlgebra.hh\
						 ./container/MultiCounter.hh\
						 ./container/multivector.hh\
						 ./container/Permutation.hh\
						 ./container/PolyTrie.hh\
						 ./container/Template_Algorithms.hh\
						 ./container/Tensor.hh


crystallographyincludedir=$(includedir)/casm/crystallography
crystallographyinclude_HEADERS=./crystallography/BasicStructure.hh\
							   ./crystallography/BasicStructure_impl.hh\
							   ./crystallography/Coordinate.hh\
							   ./crystallography/CoordinateSystems.hh\
							   ./crystallography/jsonStruc.hh\
							   ./crystallography/Lattice.hh\
							   ./crystallography/LatticeMap.hh\
							   ./crystallography/Molecule.hh\
							   ./crystallography/PrimGrid.hh\
							   ./crystallography/Site.hh\
							   ./crystallography/Structure.hh\
							   ./crystallography/SupercellEnumerator.hh\
							   ./crystallography/UnitCellCoord.hh


hullincludedir=$(includedir)/casm/hull
hullinclude_HEADERS=./hull/Hull.hh

miscincludedir=$(includedir)/casm/misc
miscinclude_HEADERS=./misc/algorithm.hh\
					./misc/CASM_math.hh\
					./misc/CASM_TMP.hh\
					./misc/cloneable_ptr.hh\
					./misc/HierarchyID.hh\
					./misc/PCA.hh\
					./misc/unique_cloneable_map.hh\
					./misc/unique_map.hh


montecarloincludedir=$(includedir)/casm/monte_carlo
montecarloinclude_HEADERS=./monte_carlo/SiteExchanger.hh\
						  ./monte_carlo/DoFMod.hh\
						  ./monte_carlo/.MonteIO.hh.swp\
						  ./monte_carlo/MonteSampler.hh\
						  ./monte_carlo/MonteCounter.hh\
						  ./monte_carlo/MonteDriver.hh.orig\
						  ./monte_carlo/MonteIO.hh\
						  ./monte_carlo/MonteSettings.hh\
						  ./monte_carlo/MonteDefinitions.hh\
						  ./monte_carlo/MonteHelpers.hh.orig\
						  ./monte_carlo/MonteDriver.hh\
						  ./monte_carlo/grand_canonical/GrandCanonicalEvent.hh\
						  ./monte_carlo/grand_canonical/GrandCanonicalSettings.hh\
						  ./monte_carlo/grand_canonical/GrandCanonicalIO.hh\
						  ./monte_carlo/grand_canonical/GrandCanonicalConditions.hh\
						  ./monte_carlo/grand_canonical/GrandCanonical.hh\
						  ./monte_carlo/MonteCarlo.hh\
						  ./monte_carlo/MCData.hh


strainincludedir=$(includedir)/casm/strain
straininclude_HEADERS=./strain/StrainConverter.hh

symmetryincludedir=$(includedir)/casm/symmetry
symmetryinclude_HEADERS=./symmetry/SymOp.hh\
						./symmetry/SymGroupRepID.hh\
						./symmetry/SymBasisPermute.hh\
						./symmetry/SymMatrixXd.hh\
						./symmetry/SymPermutation.hh\
						./symmetry/PermuteIterator.hh\
						./symmetry/SymGroup.hh\
						./symmetry/SymGroupRep.hh\
						./symmetry/SymOpRepresentation.hh


systemincludedir=$(includedir)/casm/system
systeminclude_HEADERS=./system/RuntimeLibrary.hh\
					  ./system/Popen.hh


versionincludedir=$(includedir)/casm/version
versioninclude_HEADERS=./version/version.hh

appincludedir=$(includedir)/casm/app
appinclude_HEADERS=./app/AppIO.hh\
				   ./app/casm_functions.hh\
				   ./app/DirectoryStructure.hh\
				   ./app/ProjectBuilder.hh\
				   ./app/ProjectSettings.hh

externalincludedir=$(includedir)/casm/external
externalinclude_HEADERS=./external/gzstream/gzstream.h\
						./external/json_spirit/json_spirit_error_position.h\
						./external/json_spirit/json_spirit.h\
						./external/json_spirit/json_spirit_reader_template.h\
						./external/json_spirit/json_spirit_value.h\
						./external/json_spirit/json_spirit_writer_options.h\
						./external/json_spirit/json_spirit_writer_template.h\
						./external/MersenneTwister/MersenneTwister.h\
						./external/qhull/libqhullcpp/Coordinates.h\
						./external/qhull/libqhullcpp/functionObjects.h\
						./external/qhull/libqhullcpp/PointCoordinates.h\
						./external/qhull/libqhullcpp/QhullError.h\
						./external/qhull/libqhullcpp/QhullFacet.h\
						./external/qhull/libqhullcpp/QhullFacetList.h\
						./external/qhull/libqhullcpp/QhullFacetSet.h\
						./external/qhull/libqhullcpp/Qhull.h\
						./external/qhull/libqhullcpp/QhullHyperplane.h\
						./external/qhull/libqhullcpp/QhullIterator.h\
						./external/qhull/libqhullcpp/QhullLinkedList.h\
						./external/qhull/libqhullcpp/QhullPoint.h\
						./external/qhull/libqhullcpp/QhullPointSet.h\
						./external/qhull/libqhullcpp/QhullPoints.h\
						./external/qhull/libqhullcpp/QhullQh.h\
						./external/qhull/libqhullcpp/QhullRidge.h\
						./external/qhull/libqhullcpp/QhullSet.h\
						./external/qhull/libqhullcpp/QhullSets.h\
						./external/qhull/libqhullcpp/QhullStat.h\
						./external/qhull/libqhullcpp/QhullVertex.h\
						./external/qhull/libqhullcpp/QhullVertexSet.h\
						./external/qhull/libqhullcpp/RboxPoints.h\
						./external/qhull/libqhullcpp/RoadError.h\
						./external/qhull/libqhullcpp/RoadLogEvent.h\
						./external/qhull/libqhull_r/geom_r.h\
						./external/qhull/libqhull_r/io_r.h\
						./external/qhull/libqhull_r/libqhull_r.h\
						./external/qhull/libqhull_r/mem_r.h\
						./external/qhull/libqhull_r/merge_r.h\
						./external/qhull/libqhull_r/poly_r.h\
						./external/qhull/libqhull_r/qhull_ra.h\
						./external/qhull/libqhull_r/qset_r.h\
						./external/qhull/libqhull_r/random_r.h\
						./external/qhull/libqhull_r/stat_r.h\
						./external/qhull/libqhull_r/user_r.h
