include $(top_srcdir)/common.mk

AM_CXXFLAGS = -DTXT_VERSION='"$(TXT_VERSION)"' -DEIGEN_DEFAULT_DENSE_INDEX_TYPE=long -DGZSTREAM_NAMESPACE=gz -I$(top_srcdir)/include -I$(top_srcdir)/include/casm/external/gzstream -I$(top_srcdir)/include/casm/external/qhull/libqhullcpp
AM_CPPFLAGS = -I$(top_srcdir)/include/casm/external/qhull/libqhull_r/ -I$(top_srcdir)/include/casm/external/gzstream
lib_LTLIBRARIES = libcasm.la
libcasm_la_SOURCES = ./CASM_global_definitions.cc\
					 ./app/AppIO.cc\
					 ./app/bset.cc\
					 ./app/casm_functions.cc\
					 ./app/composition.cc\
					 ./app/enum.cc\
					 ./app/files.cc\
					 ./app/format.cc\
					 ./app/import.cc\
					 ./app/init.cc\
					 ./app/monte.cc\
					 ./app/perturb.cc\
					 ./app/ProjectBuilder.cc\
					 ./app/ProjectSettings.cc\
					 ./app/query.cc\
					 ./app/ref.cc\
					 ./app/run.cc\
					 ./app/select.cc\
					 ./app/settings.cc\
					 ./app/status.cc\
					 ./app/super.cc\
					 ./app/sym.cc\
					 ./app/update.cc\
					 ./app/view.cc\
					 ./basis_set/BasisFunction.cc\
					 ./basis_set/BasisSet.cc\
					 ./basis_set/DoF.cc\
					 ./basis_set/FunctionVisitor.cc\
					 ./basis_set/OccupantFunction.cc\
					 ./basis_set/PolynomialFunction.cc\
					 ./basis_set/Variable.cc\
					 ./casm_io/Args.cc\
					 ./casm_io/DataFormatter.cc\
					 ./casm_io/DataStream.cc\
					 ./casm_io/FormatFlag.cc\
					 ./casm_io/json_io/clex.cc\
					 ./casm_io/json_io/global.cc\
					 ./casm_io/jsonParser.cc\
					 ./casm_io/Log.cc\
					 ./clex/ChemicalReference.cc\
					 ./clex/CompositionConverter.cc\
					 ./clex/ConfigDoF.cc\
					 ./clex/ConfigIO.cc\
					 ./clex/ConfigIOHull.cc\
					 ./clex/ConfigIONovelty.cc\
					 ./clex/ConfigIOSelected.cc\
					 ./clex/ConfigIOStrain.cc\
					 ./clex/ConfigIOStrucScore.cc\
					 ./clex/ConfigIterator.cc\
					 ./clex/ConfigMapping.cc\
					 ./clex/Configuration.cc\
					 ./clex/DoFManager.cc\
					 ./clex/ECIContainer.cc\
					 ./clex/NeighborList.cc\
					 ./clex/ParamComposition.cc\
					 ./clex/PrimClex.cc\
					 ./clex/Properties.cc\
					 ./clex/Reference.cc\
					 ./clex/Supercell.cc\
					 ./clusterography/ClusterFunctions.cc\
					 ./clusterography/jsonClust.cc\
					 ./clusterography/SiteCluster.cc\
					 ./container/LinearAlgebra.cc\
					 ./container/Permutation.cc\
					 ./crystallography/Coordinate.cc\
					 ./crystallography/CoordinateSystems.cc\
					 ./crystallography/Lattice.cc\
					 ./crystallography/LatticeMap.cc\
					 ./crystallography/Molecule.cc\
					 ./crystallography/PrimGrid.cc\
					 ./crystallography/Site.cc\
					 ./crystallography/Structure.cc\
					 ./crystallography/SupercellEnumerator.cc\
					 ./external/gzstream/gzstream.C\
					 ./external/qhull/libqhullcpp/Coordinates.cpp\
					 ./external/qhull/libqhullcpp/PointCoordinates.cpp\
					 ./external/qhull/libqhullcpp/Qhull.cpp\
					 ./external/qhull/libqhullcpp/QhullFacet.cpp\
					 ./external/qhull/libqhullcpp/QhullFacetList.cpp\
					 ./external/qhull/libqhullcpp/QhullFacetSet.cpp\
					 ./external/qhull/libqhullcpp/QhullHyperplane.cpp\
					 ./external/qhull/libqhullcpp/QhullPoint.cpp\
					 ./external/qhull/libqhullcpp/QhullPoints.cpp\
					 ./external/qhull/libqhullcpp/QhullPointSet.cpp\
					 ./external/qhull/libqhullcpp/QhullQh.cpp\
					 ./external/qhull/libqhullcpp/QhullRidge.cpp\
					 ./external/qhull/libqhullcpp/QhullSet.cpp\
					 ./external/qhull/libqhullcpp/QhullStat.cpp\
					 ./external/qhull/libqhullcpp/QhullVertex.cpp\
					 ./external/qhull/libqhullcpp/QhullVertexSet.cpp\
					 ./external/qhull/libqhullcpp/RboxPoints.cpp\
					 ./external/qhull/libqhullcpp/RoadError.cpp\
					 ./external/qhull/libqhullcpp/RoadLogEvent.cpp\
					 ./external/qhull/libqhull_r/geom2_r.c\
					 ./external/qhull/libqhull_r/geom_r.c\
					 ./external/qhull/libqhull_r/global_r.c\
					 ./external/qhull/libqhull_r/io_r.c\
					 ./external/qhull/libqhull_r/libqhull_r.c\
					 ./external/qhull/libqhull_r/mem_r.c\
					 ./external/qhull/libqhull_r/merge_r.c\
					 ./external/qhull/libqhull_r/poly2_r.c\
					 ./external/qhull/libqhull_r/poly_r.c\
					 ./external/qhull/libqhull_r/qset_r.c\
					 ./external/qhull/libqhull_r/random_r.c\
					 ./external/qhull/libqhull_r/rboxlib_r.c\
					 ./external/qhull/libqhull_r/stat_r.c\
					 ./external/qhull/libqhull_r/usermem_r.c\
					 ./external/qhull/libqhull_r/user_r.c\
					 ./hull/Hull.cc\
					 ./misc/CASM_math.cc\
					 ./monte_carlo/grand_canonical/GrandCanonical.cc\
					 ./monte_carlo/grand_canonical/GrandCanonicalConditions.cc\
					 ./monte_carlo/grand_canonical/GrandCanonicalIO.cc\
					 ./monte_carlo/grand_canonical/GrandCanonicalSettings.cc\
					 ./monte_carlo/MCData.cc\
					 ./monte_carlo/MonteCarlo.cc\
					 ./monte_carlo/MonteCounter.cc\
					 ./monte_carlo/MonteDefinitions.cc\
					 ./monte_carlo/MonteIO.cc\
					 ./monte_carlo/MonteSampler.cc\
					 ./monte_carlo/MonteSettings.cc\
					 ./monte_carlo/SiteExchanger.cc\
					 ./strain/StrainConverter.cc\
					 ./symmetry/PermuteIterator.cc\
					 ./symmetry/SymGroup.cc\
					 ./symmetry/SymGroupRep.cc\
					 ./symmetry/SymMatrixXd.cc\
					 ./symmetry/SymOp.cc\
					 ./symmetry/SymOpRepresentation.cc\
					 ./symmetry/SymPermutation.cc\
					 ./system/Popen.cc\
					 ./system/RuntimeLibrary.cc\
					 ./version/version.cc

#Skip versioning for now
libcasm_la_LDFLAGS=-avoid-version

#Always make the version to stay updated
.PHONY: version/version.cc
